# kor-sdk

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  README.md  pyproject.toml  repro_mock_fix.py  verify_full_flow.py  verify_virtual_llm.py
.agent/skills/kanban_dev/: SKILL.md
.agent/skills/kor_context/: SKILL.md
apps/kor-kanban/: dev.sh  package-lock.json  package.json  tailwind.new.config.js  tsconfig.json  vite.config.ts
apps/kor-kanban/server/: connection_manager.py  main.py
apps/kor-kanban/server/data/: tasks.json
apps/kor-kanban/server/routers/: attempts.py  (+3 more)
apps/kor-kanban/src/: App.tsx
apps/openai-api/: plugin.json  pyproject.toml
apps/openai-api/skills/api-usage/: SKILL.md
apps/openai-api/src/kor_plugin_openai_api/: __init__.py  main.py
apps/openai-api/src/kor_plugin_openai_api/adapters/: agent_adapter.py
apps/openai-api/src/kor_plugin_openai_api/routes/: chat.py  models.py
apps/openai-api/src/kor_plugin_openai_api/schemas/: __init__.py  models.py
docs/: DEVELOPER_GUIDE.md  configuration.md  core_concepts.md  custom_llms.md  index.md
examples/: basic_agent.py  custom_tool.py  virtual_llm_demo.py
examples/demo-plugins/kor-plugin-demo-declarative/: plugin.json
examples/scenarios/: create_project.py  run_all_scenarios.py  smoke_check.py  test_agent_factory.py  test_code_graph.py  test_configuration.py  test_file_tools.py  test_hook_system.py  test_llm_system.py  test_lsp.py  test_multi_agent.py  test_persistence.py  test_plugin_system.py  test_skills_system.py  test_tool_registry.py  test_validation_system.py  validate_sdk.py  verify_context_platform.py  verify_lsp.py
plugins/kor-plugin-code-graph/: plugin.json
plugins/kor-plugin-code-graph/commands/: index.md
plugins/kor-plugin-code-graph/scripts/: graph.py  indexer.py  search_symbols.py
plugins/kor-plugin-demo-declarative/: hooks.json
plugins/kor-plugin-demo-declarative/commands/: greet.md
plugins/kor-plugin-llm-litellm/: plugin.json  pyproject.toml
plugins/kor-plugin-llm-litellm/src/kor_plugin_llm_litellm/: __init__.py  provider.py
plugins/kor-plugin-llm-openai/: plugin.json  pyproject.toml
plugins/kor-plugin-llm-openai/src/kor_plugin_llm_openai/: __init__.py  provider.py
plugins/kor-plugin-observability/: hooks.json  plugin.json
plugins/kor-plugin-observability/scripts/: collector.py
plugins/kor-plugin-openai-api/: plugin.json
plugins/kor-plugin-semantic-search/: plugin.json  pyproject.toml
plugins/kor-plugin-semantic-search/kor_plugin_semantic_search/: backend.py  plugin.py
plugins/kor-plugin-smart-edit/: plugin.json
plugins/kor-plugin-smart-edit/scripts/: linter.py  shadow.py  tools.py
plugins/kor-plugin-system-info/: plugin.json  pyproject.toml
plugins/kor-plugin-system-info/commands/: sysinfo.md
plugins/kor-plugin-system-info/scripts/: system_info.py
plugins/kor-plugin-system-info/skills/system-diagnostics/: SKILL.md
plugins/kor-plugin-system-info/src/kor_plugin_system_info/: __init__.py  main.py  tools.py
plugins/kor-plugin-token-manager/: hooks.json  plugin.json
plugins/kor-plugin-token-manager/scripts/: tracker.py
plugins/kor-plugin-tui/: plugin.json  pyproject.toml
resources/: README.md
resources/prompts/: __init__.py  reviewer.md  supervisor.md
tests/: conftest.py  test_agents.py  test_cli_chat.py  test_cli_entry.py  test_cli_plugin.py  test_cli_smoke.py  test_code_graph.py  test_config.py  test_decorator.py  test_dx_facade.py  test_exceptions.py  test_hooks_loader.py  test_kernel.py  test_kernel_integration.py  test_kernel_lifecycle.py  test_langchain_integration.py  test_litellm_plugin.py  test_llm_architecture.py  test_mcp_reconnect.py  test_model_selector.py  test_openai_schemas.py  test_persistence.py  test_plugin_loader.py  test_professional.py  test_refactor.py  test_searchable_registry.py  test_semantic_search.py  test_service_registry.py  test_smart_edit.py  test_tool_registry.py  test_virtual_stack.py  verify_agent_factory.py  verify_agent_flow.py  verify_agents.py  verify_code_graph.py  verify_langchain_integration.py  verify_litellm_plugin.py  verify_llm_architecture.py  verify_openai_api.py  verify_openai_mock.py  (+5 more)
(+28 files in other folders)
