[project]
name = "kor-sdk"
version = "0.1.0"
description = "KOR Monorepo"
requires-python = ">=3.10"
dependencies = [
    "kor-cli",
    "kor-core",
]

[tool.uv.sources]
kor-cli = { path = "packages/kor-cli", editable = true }
kor-core = { path = "packages/kor-core", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
