[project]
name = "kor-sdk"
version = "0.1.0"
description = "KOR Monorepo"
requires-python = ">=3.10"
dependencies = [
    "kor-cli",
    "kor-core",
    "kor-plugin-openai-api",
]

[tool.uv.sources]
kor-cli = { path = "packages/kor-cli", editable = true }
kor-core = { path = "packages/kor-core", editable = true }
kor-plugin-openai-api = { path = "plugins/kor-plugin-openai-api", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "examples/scenarios"]
python_files = ["test_*.py", "verify_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

