[project]
name = "kor-plugin-openai-api"
version = "0.1.0"
description = "OpenAI-compatible REST API for KOR agents"
authors = [{name = "KOR Team", email = "team@kor.dev"}]
dependencies = [
    "kor-core",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kor_plugin_openai_api"]

[project.scripts]
kor-openai-api = "kor_plugin_openai_api.main:run"
