[project]
name = "kor-plugin-semantic-search"
version = "0.1.0"
description = "Semantic Search backend for KOR SDK using ChromaDB"
requires-python = ">=3.10"
dependencies = [
    "kor-core",
    "chromadb",
    "sentence-transformers",
]

[project.entry-points."kor.plugin"]
semantic-search = "kor_plugin_semantic_search.plugin:SemanticSearchPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
