[project]
name = "kor-plugin-system-info"
version = "0.1.0"
description = "Plugin to check system stats"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kor_plugin_system_info"]
