[project]
name = "kor-plugin-tui"
version = "0.1.0"
description = "KOR Terminal User Interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.40.0",
    "kor-core"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kor_plugin_tui"]

[tool.uv.sources]
kor-core = { workspace = true }
